<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Server Preferences">

        <EditTextPreference
            android:defaultValue="@string/default_server_url"
            android:inputType="textWebEditText"
            android:key="pref_server_url"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/server_url_summary"
            android:title="@string/server_url" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Upload Preferences">

        <EditTextPreference
            android:defaultValue="30"
            android:inputType="number"
            android:key="pref_auto_upload"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/auto_upload_summary"
            android:title="@string/auto_upload" />
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/uploadChunkReadable"
            android:entryValues="@array/uploadChunkValue"
            android:key="pref_upload_chunk"
            android:summary="@string/upload_chunk_size_summary"
            android:title="@string/upload_chunk_size" />
    </PreferenceCategory>
</PreferenceScreen>