<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Logs Preferences">
        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="false"
            android:key="pref_show_logs"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/show_logs" />

        <EditTextPreference
            android:defaultValue="50"
            android:enabled="false"
            android:key="pref_logs_max_lines"
            android:singleLine="true"
            android:title="@string/logs_max_lines"
            android:visibility="gone" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Accelerometer Preferences">

        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="pref_record_accelerometer"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/record_accelerometer" />

    </PreferenceCategory>
</PreferenceScreen>